Added back spots_status include
Noticing several clients asking about having the spots status of registrants back in as a feature. Added back the spots_status.html include.

--- a/tendenci2018/templates/events/reg8n/registration_pricing.html
+++ b/tendenci2018/templates/events/reg8n/registration_pricing.html
@@ -62,6 +62,7 @@
       {% endif %}
       
     </form>
+      {% include "events/include/spots_status.html" %}
     
     {% if is_registrant %}
     <div id="is-registrant"><a href="{% url "event.registrant.search" event.pk %}?q={{ user.email }}">
